# aether

./: .gitignore  docker-compose.yml
docs/: .gitattributes  testplan.md  tr.md
services/api-gateway/: Dockerfile  nginx.conf
services/booking/: .env  Dockerfile  README.md  create_tables.py  requirements.txt
services/booking/app/: main.py
services/booking/app/bookings/: cleanup_worker.py  models.py  publisher.py  repository.py  router.py  schemas.py
services/booking/app/database/: engine.py
services/common/inventory-api/: openapi.json
services/inventory/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_data.sql
services/inventory/app/: config.py  database.py  exceptions.py  main.py  models.py
services/inventory/app/migrations/: env.py
services/inventory/app/migrations/versions/: 283c27e1d397_add_inventory_daily_and_operations.py  4b5d7ce699fe_add_uuid_colomn_and_delete_operation_id_.py  879890abd88f_initial_migration.py  886264e452fe_add_unique_constraint_to_inventory_daily.py
services/inventory/app/rooms/: models.py  repository.py  router.py  schemas.py
services/inventory/data/: room_types_data.sql  test_inventory_daily_data.sql
services/inventory/scripts/: app.sh
