[project]
name = "inventory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.123.5",
    "greenlet==3.0.3",
    "pydantic<2",
    "sqlalchemy>=2.0.44",
]
